unpackaged/main/default/objects/Member__c/Member__c.object-meta.xml
<CustomObject>
    <description>Junction Object To Link Members to Groups</description>
    <label>Member</label>
    <nameField>
        <displayFormat>M-{000000000}</displayFormat>
        <label>Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>