unpackaged/main/default/objects/Member__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>