unpackaged/main/default/objects/Member__c/fields/Mbr_Id__c.field-meta.xml
<CustomField>
    <fullName>Mbr_Id__c</fullName>
    <description>Use to create dynamic URL</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Mbr Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>