unpackaged/main/default/objects/Member__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Membership</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>