unpackaged/main/default/objects/Member__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>