unpackaged/main/default/objects/Member__c/fields/Member_System_Information__c.field-meta.xml
<CustomField>
    <fullName>Member_System_Information__c</fullName>
    <formula>IF(
Group__r.System__c = &quot;Compass&quot;,
HYPERLINK(&quot;http://csw/Search?memberId=&quot; &amp;  Mbr_Id__c &amp; &quot;&amp;GroupId=&quot; &amp; Group_Id__c, IMAGE(&quot;resource/csw&quot;, &quot;CSW&quot;, 26.25, 58)),
IF(
Group__r.System__c = &quot;LifePro&quot;,
 IMAGE(&quot;resource/LIFEPRO&quot;, &quot;LifePro&quot;, 33.25, 95),&quot;&quot;
)
)</formula>
    <label>Member System Information</label>
    <type>Text</type>
</CustomField>