unpackaged/main/default/objects/Member__c/listViews/All_Member.listView-meta.xml
<ListView>
    <fullName>All_Member</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Member__c</columns>
    <columns>Group_Id__c</columns>
    <columns>Mbr_Id__c</columns>
    <columns>Member_Status__c</columns>
    <columns>Policy_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Policy_Number__c</field>
        <operation>equals</operation>
        <value>P00001507</value>
    </filters>
    <label>All Member</label>
</ListView>