unpackaged/main/default/objects/Member__c/listViews/My_Member.listView-meta.xml
<ListView>
    <fullName>My_Member</fullName>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Member__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Member</label>
</ListView>